fix(i18n): created separated files to translate

--- a/src/locale/es.xlf
+++ b/src/locale/es.xlf
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="en" datatype="plaintext" original="ng2.template">
+  <file source-language="es" datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="makeAnExchange" datatype="html">
-        <source>Faça um intercâmbio</source>
+        <source>Faça um intercâmbio muito fodaaaaa</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/landing-page-menu/landing-page-menu.component.html</context>
           <context context-type="linenumber">17</context>
