--- a/src/locale/messages.es.xlf
+++ b/src/locale/messages.es.xlf
@@ -806,7 +806,7 @@
           <context context-type="sourcefile">app/form-gv/form-gv.component.html</context>
           <context context-type="linenumber">62</context>
         </context-group>
-      <target>Cómo preferís que te llamemos?</target></trans-unit>
+      <target>Como te llamas?</target></trans-unit>
       <trans-unit id="fullnameMobilePlaceholder" datatype="html">
         <source>Nome completo</source>
         <context-group purpose="location">
