--- a/src/locale/messages.es.xlf
+++ b/src/locale/messages.es.xlf
@@ -3101,13 +3101,13 @@
       <target>Soporte para encontrar tu vacante</target></trans-unit>
       <trans-unit id="programAboutTitle" datatype="html">
         <source>
-                Benefícios
+                BENEFÍCIOS
               </source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/landing-page-gv/landing-page-gv.component.html</context>
           <context context-type="linenumber">180</context>
         </context-group>
-      <target>Beneficios</target></trans-unit>
+      <target>BENEFÍCIOS</target></trans-unit>
       <trans-unit id="programAboutItem5Title" datatype="html">
         <source>
                 Comida e alojamento
