fix(landing-page-gv): changed new item icon and translation fix

--- a/src/locale/messages.es.xlf
+++ b/src/locale/messages.es.xlf
@@ -3107,7 +3107,7 @@
           <context context-type="sourcefile">app/landing-page-gv/landing-page-gv.component.html</context>
           <context context-type="linenumber">180</context>
         </context-group>
-      <target>BENEFÍCIOS</target></trans-unit>
+      <target>BENEFICIOS</target></trans-unit>
       <trans-unit id="programAboutItem5Title" datatype="html">
         <source>
                 Comida e alojamento
